增加一个mv包，并且新建了一个医嘱物理视图

--- a/openhis-core/openhis-domain/pom.xml
+++ b/openhis-core/openhis-domain/pom.xml
@@ -29,6 +29,7 @@
         <module>openhis-rule</module>
         <module>openhis-workflow</module>
         <module>openhis-support</module>
+        <module>openhis-mv</module>
     </modules>
 
     <dependencies>
