--- a/openhis-H22010202493/pom.xml
+++ b/openhis-H22010202493/pom.xml
@@ -26,5 +26,20 @@
             <artifactId>openhis-application</artifactId>
             <version>${openhis.version}</version>
         </dependency>
+
+
+        <!--liteflow-->
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>liteflow-spring-boot-starter</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>liteflow-script-javax-pro</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
     </dependencies>
 </project>
