--- a/openhis-H22010202493/src/main/resources/application-H22010202493.yml
+++ b/openhis-H22010202493/src/main/resources/application-H22010202493.yml
@@ -85,3 +85,38 @@ spring:
       messages:
         basename: i18n/general_message/messages
         encoding: utf-8
+axon:
+  # 1. 全局禁用 AxonServer
+  axonserver:
+    enabled: false
+  # 2. 全局令牌存储：强制内存
+  tracking-token-store:
+    type: inmemory
+    # 显式指定 TokenStore Bean 名称
+    bean-name: inMemoryTokenStore
+  # 3. 针对报错的处理器，单独强制配置
+  eventhandling:
+    processors:
+      com.openhis.domain.test.handle:
+        mode: tracking
+        # 强制该处理器使用内存令牌存储
+        trackingTokenStore:
+          type: inmemory
+          bean-name: inMemoryTokenStore
+        # 禁用令牌持久化（彻底杜绝数据库访问）
+        persist-token: false
+        # 关闭处理器的 JDBC 依赖
+        use-explicit-token-store: true
+  # 4. 禁用所有 JDBC 自动配置
+  jdbc:
+    enabled: false
+  auto-create-schema: false
+liteflow:
+  rule-source: liteflow/*.el.xml # 流程规则文件路径  本地路径即可   C:\Users\82739\Desktop\*.el.xml
+#  scan-packages: "com.openhis.flow.node" # 自定义节点扫描包
+  print-execution-log: true
+#  script:
+#    type: java # 脚本类型：java/javascript/groovy等
+#    java:
+#      script-path: C:/Users/82739/Desktop/ # 磁盘脚本文件根路径（绝对路径/相对路径）
+#      cache: false # 关闭缓存，修改脚本后无需重启（生产环境可开启）
