--- a/openhis-H22010202493/src/main/resources/application-H22010202493.yml
+++ b/openhis-H22010202493/src/main/resources/application-H22010202493.yml
@@ -62,7 +62,7 @@ spring:
   # redis 配置
   data:
     redis:
-      host: localhost
+      host: 192.168.5.128
       # 地址
       port: 6379
       # 数据库索引
