--- a/openhis-core/openhis-application/pom.xml
+++ b/openhis-core/openhis-application/pom.xml
@@ -39,10 +39,6 @@
             <groupId>org.open-source.health</groupId>
             <artifactId>openhis-workflow</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.open-source.health</groupId>
-            <artifactId>openhis-medication</artifactId>
-        </dependency>
         <!--其他需要的领域模块可以继续添加-->
         <!--共通-->
         <dependency>
@@ -53,6 +49,15 @@
         <dependency>
             <groupId>org.open-source.health</groupId>
             <artifactId>openhis-persistence</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.open-source.health</groupId>
+            <artifactId>openhis-medication</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.open-source.health</groupId>
+            <artifactId>openhis-mv</artifactId>
+            <version>0.5.0</version>
         </dependency>
     </dependencies>
 </project>
