--- a/openhis-core/openhis-domain/openhis-medication/pom.xml
+++ b/openhis-core/openhis-domain/openhis-medication/pom.xml
@@ -5,11 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.open-source.health</groupId>
-        <artifactId>openhis-core</artifactId>
+        <artifactId>openhis-domain</artifactId>
         <version>0.5.0</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>openhis-medication</artifactId>
 
+    <artifactId>openhis-medication</artifactId>
+    <version>${openhis.version}</version>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.open-source.health</groupId>
+            <artifactId>openhis-common</artifactId>
+        </dependency>
+    </dependencies>
 </project>
