--- a/openhis-core/openhis-domain/pom.xml
+++ b/openhis-core/openhis-domain/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.open-source.health</groupId>
+        <groupId>org.open-source.whale</groupId>
         <artifactId>openhis-core</artifactId>
         <version>0.5.0</version>
         <relativePath>../pom.xml</relativePath>
