--- a/openhis-core/pom.xml
+++ b/openhis-core/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>org.open-source.whale</groupId>
     <artifactId>openhis-core</artifactId>
     <version>0.5.0</version>
 
@@ -100,6 +100,21 @@
                 <groupId>org.open-source.health</groupId>
                 <artifactId>openhis-workflow</artifactId>
                 <version>${openhis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.open-source.health</groupId>
+                <artifactId>openhis-mv</artifactId>
+                <version>${openhis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.axonframework</groupId>
+                <artifactId>axon-spring-boot-starter</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId><!-- 版本可根据实际需求调整，建议使用3.x系列稳定版 -->
             </dependency>
         </dependencies>
     </dependencyManagement>
