--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,22 @@
             </dependency>
 
             <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>3.25.3</version> <!-- 版本可根据实际需求调整，建议使用3.x系列稳定版 -->
+            </dependency>
+
+
+            <!--liteflow-->
+            <dependency>
+                <groupId>com.yomahub</groupId>
+                <artifactId>liteflow-spring-boot-starter</artifactId>
+                <version>2.15.2</version>
+            </dependency>
+
+
+
+            <dependency>
                 <groupId>org.apache.httpcomponents.client5</groupId>
                 <artifactId>httpclient5</artifactId>
                 <version>${httpclient5.version}</version>
@@ -255,6 +271,21 @@
             </releases>
         </repository>
     </repositories>
+
+    <!-- 必须包含中央仓库配置 -->
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>public</id>-->
+<!--            <url>https://repo1.maven.org/maven2/</url>-->
+<!--            <releases>-->
+<!--                <enabled>true</enabled>-->
+<!--            </releases>-->
+<!--            <snapshots>-->
+<!--                <enabled>false</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
+<!--    </repositories>-->
+
 
     <pluginRepositories>
         <pluginRepository>
