--- a/openhis-application/pom.xml
+++ b/openhis-application/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.open-source.health</groupId>
-        <artifactId>openhis-core</artifactId>
+        <artifactId>whale</artifactId>
         <version>0.5.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
