--- a/openhis-document/pom.xml
+++ b/openhis-document/pom.xml
@@ -5,11 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.open-source.health</groupId>
-        <artifactId>openhis-domain</artifactId>
+        <artifactId>whale</artifactId>
         <version>0.5.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>openhis-document</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.open-source.health</groupId>
+            <artifactId>openhis-common</artifactId>
+        </dependency>
+    </dependencies>
 </project>
