--- a/openhis-financial/pom.xml
+++ b/openhis-financial/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.open-source.health</groupId>
-        <artifactId>openhis-domain</artifactId>
+        <artifactId>whale</artifactId>
         <version>0.5.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
