--- a/openhis-ybapp/src/main/resources/application.yml
+++ b/openhis-ybapp/src/main/resources/application.yml
@@ -34,7 +34,7 @@ server:
 # 日志配置
 logging:
   level:
-    com.openhis: debug
+    org.openhis: debug
     org.springframework: warn
 
 # 用户配置
@@ -81,7 +81,7 @@ token:
 # MyBatis配置
 mybatis-plus:
   # 搜索指定包别名
-  typeAliasesPackage: com.whale.**.domain,com.openhis.**.domain
+  typeAliasesPackage: com.whale.**.domain,org.openhis.**.domain
   # 配置mapper的扫描，找到所有的mapper.xml映射文件
   mapperLocations: classpath*:mapper/**/*Mapper.xml
   # 加载全局的配置文件
